<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="svkt.wallet.RegisterActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteY="35dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/contactno" />

    <EditText
        android:id="@+id/contactno"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="Contact No"
        android:inputType="phone"
        tools:layout_editor_absoluteY="167dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/contactno"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editText17" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="158dp"
        android:layout_height="32dp"
        android:text="@string/enterCardNo"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/address"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardno2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/address" />

    <EditText
        android:id="@+id/cardno1"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="517dp" />

    <EditText
        android:id="@+id/cardno4"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginRight="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="517dp" />

    <EditText
        android:id="@+id/cardno3"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteY="517dp"
        app:layout_constraintRight_toLeftOf="@+id/cardno4"
        android:layout_marginRight="44dp" />

    <EditText
        android:id="@+id/cardno2"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginRight="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toLeftOf="@+id/cardno3"
        tools:layout_editor_absoluteY="517dp"
        app:layout_constraintLeft_toRightOf="@+id/cardno1"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:id="@+id/address"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/addressHint"
        android:inputType="textPostalAddress"
        tools:layout_editor_absoluteY="381dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editText17"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/confirmPass"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="307dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/expiryDate"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteY="655dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterExpDate"
        android:textSize="18dp"
        tools:layout_editor_absoluteY="610dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/expiryDate" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btnstyle"
        android:text="@string/registerBtn"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteY="773dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
